[package]
name = "client"
version = "0.1.0"
authors = ["vic <vic.xu.development@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xprogram = { version = "0.1.0", path="../program", features = [ "no-entrypoint" ] }
solana-client = "1.8.3"
solana-sdk = "1.8.3"