[package]
authors = ["vic <vic.xu.development@gmail.com>"]
edition = "2018"
name = "bito_program"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
solana-program = "1.7.11"

[dev-dependencies]
proptest = "1.0"
solana-sdk = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
